--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: #defff8;
+    background-color: #FFF7F5;
 }
 
 .index-meni {
@@ -18,9 +18,9 @@ body {
 
 .table {
     font-size: 25px;
-    width: 1200px;
+    width: 1300px;
     margin-top: 30px;
-    margin-left: 200px;
+    margin-left: 170px;
 }
 
 #btn_dodaj {
@@ -46,4 +46,10 @@ body {
 
 .pocetna {
     width: 500px;
+}
+
+#izmeni_dugme {
+    margin-top: 15px;
+    width: 550px;
+    height: 45px;
 }
